--- a/index.html
+++ b/index.html
@@ -112,9 +112,22 @@
         <div class="container">
           <h2 class="projects-title">Чем мы занимаемся</h2>
           <ul class="list">
-            <li class="li-item"><img src="./img/img.png" alt="Photo" /></li>
-            <li class="li-item"><img src="./img/img1.png" alt="Photo" /></li>
-            <li class="li-item"><img src="./img/img2.png" alt="Photo" /></li>
+            <li class="li-item">
+              <img src="./img/img.png" alt="Photo" />
+            <div class="overlay">
+              <h3 class="overlay-title">Десктопные приложения</h3>
+            </div>
+          </li>
+            <li class="li-item"><img src="./img/img1.png" alt="Photo" />
+            <div class="overlay">
+              <h3 class="overlay-title">Мобильные приложения</h3>
+            </div>
+            </li>
+            <li class="li-item"><img src="./img/img2.png" alt="Photo" />
+            <div class="overlay">
+              <h3 class="overlay-title">Дизайнерские решения</h3>
+            </div>
+            </li>
           </ul>
         </div>
         </section>
@@ -339,6 +352,15 @@
           </div>
         </div>
       </footer>
+      <div class="backdrop">
+        <div class="modal">
+          <button class="close-modal">
+            <svg class="backdrop-icon" width="18" height="18">
+              <use href="./img/icon/sprite.svg#icon-close-modal"></use>
+            </svg>
+          </button>
+        </div>
+      </div>
 
   </body>
 </html>
