--- a/portfolio.html
+++ b/portfolio.html
@@ -61,66 +61,110 @@
             <div class="projects">
               <ul class="list">
                 <li class="li-item">
-                  <img src="./img/img7.png" alt="Photo" width="370">
+                  <div class="projects-overlay">
+                  <img class="img" src="./img/img7.png" alt="Photo" width="370">
+                    <p class="paragraph">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                  </div>
                   <div class="projects-info">
                     <h3 class="section-title">Технокряк</h3>
                     <p class="section-info">Веб-сайт</p>
                   </div>
                 </li>
                 <li class="li-item">
-                  <img src="./img/img8.png" alt="Photo" width="370">
-                  <div class="projects-info">
-                    <h3 class="section-title">Постер New Orlean vs Golden Star</h3>
-                    <p class="section-info">Дизайн</p>
+                  <div class="projects-overlay">
+                    <img class="img" src="./img/img8.png" alt="Photo" width="370">
+                    <p class="paragraph">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                      платформу для цифрового
+                      шпионажа и атак на защищённые сервера конкурентов.</p>
                   </div>
-                </li>
-                <li class="li-item">
-                  <img src="./img/img9.png" alt="Photo" width="370">
                   <div class="projects-info">
-                    <h3 class="section-title">Ресторан Seafood</h3>
-                    <p class="section-info">Приложение</p>
-                  </div>
-                </li>
-                <li class="li-item">
-                  <img src="./img/img10.png" alt="Photo" width="370">
-                  <div class="projects-info">
-                    <h3 class="section-title">Проект Prime</h3>
-                    <p class="section-info">Маркетинг</p>
-                  </div>
-                </li>
-                <li class="li-item">
-                  <img src="./img/img11.png" alt="Photo" width="370">
-                  <div class="projects-info">
-                    <h3 class="section-title">Проект Boxes</h3>
-                    <p class="section-info">Приложение</p>
-                  </div>
-                </li>
-                <li class="li-item">
-                  <img src="./img/img12.png" alt="Photo" width="370">
-                  <div class="projects-info">
-                    <h3 class="section-title">Inspiration has no Borders</h3>
+                    <h3 class="section-title">Технокряк</h3>
                     <p class="section-info">Веб-сайт</p>
                   </div>
                 </li>
                 <li class="li-item">
-                  <img src="./img/img13.png" alt="Photo" width="370">
+                  <div class="projects-overlay">
+                    <img class="img" src="./img/img9.png" alt="Photo" width="370">
+                    <p class="paragraph">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                      платформу для цифрового
+                      шпионажа и атак на защищённые сервера конкурентов.</p>
+                  </div>
                   <div class="projects-info">
-                    <h3 class="section-title">Издание Limited Edition</h3>
-                    <p class="section-info">Дизайн</p>
+                    <h3 class="section-title">Технокряк</h3>
+                    <p class="section-info">Веб-сайт</p>
                   </div>
                 </li>
                 <li class="li-item">
-                  <img src="./img/img14.png" alt="Photo" width="370">
+                  <div class="projects-overlay">
+                    <img class="img" src="./img/img10.png" alt="Photo" width="370">
+                    <p class="paragraph">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                      платформу для цифрового
+                      шпионажа и атак на защищённые сервера конкурентов.</p>
+                  </div>
                   <div class="projects-info">
-                    <h3 class="section-title">Проект LAB</h3>
-                    <p class="section-info">Маркетинг</p>
+                    <h3 class="section-title">Технокряк</h3>
+                    <p class="section-info">Веб-сайт</p>
                   </div>
                 </li>
                 <li class="li-item">
-                  <img src="./img/img15.png" alt="Photo" width="370">
+                  <div class="projects-overlay">
+                    <img class="img" src="./img/img11.png" alt="Photo" width="370">
+                    <p class="paragraph">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                      платформу для цифрового
+                      шпионажа и атак на защищённые сервера конкурентов.</p>
+                  </div>
                   <div class="projects-info">
-                    <h3 class="section-title">Growing Business</h3>
-                    <p class="section-info">Приложение</p>
+                    <h3 class="section-title">Технокряк</h3>
+                    <p class="section-info">Веб-сайт</p>
+                  </div>
+                </li>
+                <li class="li-item">
+                  <div class="projects-overlay">
+                    <img class="img" src="./img/img12.png" alt="Photo" width="370">
+                    <p class="paragraph">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                      платформу для цифрового
+                      шпионажа и атак на защищённые сервера конкурентов.</p>
+                  </div>
+                  <div class="projects-info">
+                    <h3 class="section-title">Технокряк</h3>
+                    <p class="section-info">Веб-сайт</p>
+                  </div>
+                </li>
+                <li class="li-item">
+                  <div class="projects-overlay">
+                    <img class="img" src="./img/img13.png" alt="Photo" width="370">
+                    <p class="paragraph">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                      платформу для цифрового
+                      шпионажа и атак на защищённые сервера конкурентов.</p>
+                  </div>
+                  <div class="projects-info">
+                    <h3 class="section-title">Технокряк</h3>
+                    <p class="section-info">Веб-сайт</p>
+                  </div>
+                </li>
+                <li class="li-item">
+                  <div class="projects-overlay">
+                    <img class="img" src="./img/img14.png" alt="Photo" width="370">
+                    <p class="paragraph">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                      платформу для цифрового
+                      шпионажа и атак на защищённые сервера конкурентов.</p>
+                  </div>
+                  <div class="projects-info">
+                    <h3 class="section-title">Технокряк</h3>
+                    <p class="section-info">Веб-сайт</p>
+                  </div>
+                </li>
+                <li class="li-item">
+                  <div class="projects-overlay">
+                    <img class="img" src="./img/img15.png" alt="Photo" width="370">
+                    <p class="paragraph">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                      платформу для цифрового
+                      шпионажа и атак на защищённые сервера конкурентов.</p>
+                  </div>
+                  <div class="projects-info">
+                    <h3 class="section-title">Технокряк</h3>
+                    <p class="section-info">Веб-сайт</p>
                   </div>
                 </li>
               </ul>
