--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
             <nav>
               <ul class="nav-menu list">
                 <li><a href="./index.html" class="link">Студия</a></li>
-                <li><a href="./portfolio.html" class="special-link">Портфолио</a></li>
+                <li><a href="./portfolio.html" class="special link">Портфолио</a></li>
                 <li><a href="#Контакты" class="link">Контакты</a></li>
               </ul>
             </nav>
